--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
 	font-family: 'Open Sans', Helvetica, Arial, Sans-serif;
 	color: #212121;
 }
-h1, h2, h3, h4 {
+h1, h2, h3 {
 	margin: 0;
 	font-family: 'Roboto Slab', Helvetica, Arial, Sans-serif;
 	font-weight: 400;
@@ -12,7 +12,7 @@ form {
 	width: 100%;
 	max-width: 250px;
 }
-form input, textarea, select, button {
+form input, textarea, button {
 	width: 100%;
 	box-sizing: border-box;
 	margin: 5px;
@@ -34,6 +34,10 @@ form input, textarea, select, button {
 .board > h2 {
 	width: 100%;
 	margin-bottom: 20px;
+}
+.board > p {
+	width: 100%;
+	margin-top: -10px;
 }
 .data-item {
 	flex-direction: row;
